Add jpackage installer creation instructions to README
This commit includes instructions on how to create an application installer using jpackage in the README file. It covers the necessary commands and options for different platforms (MacOS, Windows, Linux), and also mentions that a JDK is not required for running the packaged app.